; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_evmisc.c_acpi_ev_remove_global_lock_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_evmisc.c_acpi_ev_remove_global_lock_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ev_remove_global_lock_handler = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@acpi_gbl_global_lock_present = common dso_local global i32 0, align 4
@ACPI_EVENT_GLOBAL = common dso_local global i32 0, align 4
@acpi_ev_global_lock_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @acpi_ev_remove_global_lock_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_ev_remove_global_lock_handler() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @ev_remove_global_lock_handler, align 4
  %4 = call i32 @ACPI_FUNCTION_TRACE(i32 %3)
  %5 = load i32, i32* @FALSE, align 4
  store i32 %5, i32* @acpi_gbl_global_lock_present, align 4
  %6 = load i32, i32* @ACPI_EVENT_GLOBAL, align 4
  %7 = load i32, i32* @acpi_ev_global_lock_handler, align 4
  %8 = call i32 @acpi_remove_fixed_event_handler(i32 %6, i32 %7)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @return_ACPI_STATUS(i32 %9)
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @acpi_remove_fixed_event_handler(i32, i32) #1

declare dso_local i32 @return_ACPI_STATUS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
